repair cache problem with list's